# spack-bootstrap-installer

./: .gitignore  CMakeLists.txt  LICENSE-APACHE.rtf  README.md  patch.xml  setup.bat  spack.wxs  spack_cmd.bat.in  spack_installer.sln
images/: CMakeLists.txt
scripts/: CMakeLists.txt  Spack.lnk  haspywin.py  run_spack.bat  spack.bat  spack.bat.in  spack_cmd.bat  spack_cmd.bat.in
